address spacing issue in nav

--- a/src/Nav.css
+++ b/src/Nav.css
@@ -1,38 +1,43 @@
 .nav {
     display: flex;
-    justify-content: space-between;
     padding: 25px 35px 0px 35px;
     background-color: transparent;
-
 }
 
-.nav ul{
-    text-decoration: none;
-    list-style: none;
-    padding-left: 0;
-    display: flex;
-    list-style-type: none;
-    align-content: center;
+/* Home, Projects, Contact */
+.nav_links { 
+  flex: 0.2;
+  display: flex;
+  align-items: center;
 }
 
-.nav a {
-    text-decoration: none;
+/* Logo */
+.nav_logo {
+  display: flex;
+  flex: 0.6;
+  align-items: center;
+  justify-content: center;
+  
 }
 
+.nav_logo img{
+  height: 30px;
+}
 
+/* Social Icons */
 .nav_icons {
-    font-size: 35px;
-    width: 200px;
     display: flex;
-    justify-content: space-between;
+    flex: 0.2;
     align-items: center;
-    
+    justify-content: flex-end;
+    font-size: 35px;
 }
 
 .nav_icons svg {
     color: #E34276;
     cursor: pointer;
     transition: 0.5s all;
+    padding-left: 45px;
 }
 
 .nav_icons svg:hover {
@@ -40,30 +45,74 @@
     transition: 0.5s all;
 }
 
-
-.nav_links {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.nav_links ul {
+  display: flex;
+  list-style-type: none;
+  padding: 0;
 }
+
+
 
 .nav_links li {
     font-size: 18px;
     font-weight:bold;
     color: white;
-    margin-left: 20px;
     align-items: center;
     overflow: hidden;
   }
   
-.nav_logo {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
 
-.nav_logo img{
-    height: 30px;
-}
 
+
+.nav_links a {
+    text-decoration: none;
+    position: relative;
+    display: block;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    transition: color 0.1s, background-color 0.1s;
+    color: #000;
+  }
+
+  .nav_links :nth-child(2) {
+    margin-left: 40px;
+  }
+
+  .nav_links :nth-child(3) {
+    margin-left: 40px;
+  }
+
+
+  .nav_links  a:focus, a:active {
+    color: #E34276;
+  }
+  
+  .nav_links  a::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 100%;
+    height: 4px;
+    width: 100%;
+    background-color: #E34276;
+    -webkit-transform-origin: right;
+            transform-origin: right;
+    -webkit-transform: scale(0, 1);
+            transform: scale(0, 1);
+    transition: color 0.2s, -webkit-transform 0.2s ease-out;
+    transition: color 0.2s, transform 0.2s ease-out;
+    transition: color 0.2s, transform 0.2s ease-out, -webkit-transform 0.2s ease-out;
+  }
+  
+  .nav_links  a:active::before {
+    background-color: #E34276;
+  }
+  
+  .nav_links a:hover::before,
+  a:focus::before {
+    -webkit-transform-origin: left ;
+            transform-origin: left ;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
 
